Bug 1280175 - Allow passing lvalue to MediaEventProducerExc<T>::Notify. r=gerald

MozReview-Commit-ID: 6Wr3obvkVXo